Update the z-index value of the settings menu to fix overlapping issues.

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -10,6 +10,7 @@
 
 .setting-dropdown {
   -webkit-user-select: none;
+  z-index: 200;
 
   & input {
     vertical-align: text-bottom;
